->Changed fillHistos(), fitHistos(), initGraphClusters(), initHistosClusters(), storeHistos() and storeFits() in QualityControl::Uniformity::AnalyzeResponseUniformityHits to take as input a DetectorMPGD object by reference and work with this object instead of the stored DetectorMPGD class attribute inherited from FrameworkBase.

Update: July 5th
==================================================
->Added overloaded method Uniformity::SelectorCluster::filterClusters() for filtering an input vector<Cluster> based on selection criterion stored in the stored/provided Uniformity::AnalysisSetupUniformity
->Added overloaded method Uniformity::SelectorHit::filterHits() for filtering an input vector<Hit> based on selection criterion stored in the stored/provided Uniformity::AnalysisSetupUniformity
->Added smart pointers hMulti_Clust & hMulti_Hit to DetectorMPGD; these serve as summary plots showing the hit & cluster multiplicity per event over the entire detector
->Uniformity::AnalyzeResponseUniformityClusters::initHistosClusters() will now initialize detMPGD.hMulti_Clust
->Uniformity::AnalyzeResponseUniformityHits::initHistosHits() will now initialize detMPGD.hMulti_Hit
->Added attribute Timing::HistoSetup histoSetup_hitMulti to Uniformity::AnalysisSetupUniformity
->Uniformity::ParameterLoaderAnalysis::loadAnalysisParametersHistograms() will now also load a Timing::HistoSetup object for hit multiplicity
->Default config/configAnalysis.cfg now has a histogram field for hit multiplicity
->Added method Uniformity::DetectorMPGD::SetEvent() for taking an input event, filling event level distributions, and then setting the Physics Objects in the detector
->Added function Uniformity::getEventRange() in include/UniformityUtilityFunctions.h
->Uniformity::SelectorCluster::setClusters() now uses Uniformity::getEventRange() to determine event range
->Uniformity::SelectorCluster::clusterPassesSelection() changed to public